Disabled scanning while squared up

--- a/LethalHands/LethalHands.csproj
+++ b/LethalHands/LethalHands.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Input.cs" />
     <Compile Include="LethalHands.cs" />
     <Compile Include="LethalHandsNetworker.cs" />
+    <Compile Include="Patches\HudManagerPatch.cs" />
     <Compile Include="Patches\NetworkingPatches.cs" />
     <Compile Include="Patches\PlayerControllerBPatch.cs" />
     <Compile Include="Patches\StartMatchLeverPatch.cs" />
