--- a/LethalHands/LethalHands.csproj
+++ b/LethalHands/LethalHands.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.Collections, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="Unity.InputSystem, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Unity.InputSystem.dll</HintPath>
@@ -96,16 +97,20 @@
   <ItemGroup>
     <Compile Include="Animation.cs" />
     <Compile Include="Assets.cs" />
+    <Compile Include="NetworkConfig.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="LethalHands.cs" />
     <Compile Include="LethalHandsNetworker.cs" />
+    <Compile Include="LocalConfig.cs" />
     <Compile Include="Patches\HudManagerPatch.cs" />
+    <Compile Include="Patches\InteractTriggerPatch.cs" />
     <Compile Include="Patches\NetworkingPatches.cs" />
     <Compile Include="Patches\PlayerControllerBPatch.cs" />
     <Compile Include="Patches\StartMatchLeverPatch.cs" />
     <Compile Include="Patches\TerminalPatch.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SyncedInstance.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CHANGELOG.md" />
