--- a/LethalHands/LethalHands.csproj
+++ b/LethalHands/LethalHands.csproj
@@ -48,7 +48,7 @@
     </Reference>
     <Reference Include="LethalEmotesAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Downloads\Gemumoddo-LethalEmotesAPI-1.12.4\LethalEmotesApi\LethalEmotesAPI.dll</HintPath>
+      <HintPath>..\..\..\..\Documents\Gemumoddo-LethalEmotesAPI-1.13.2\LethalEmotesApi\LethalEmotesAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
